--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
+    "cheerio": "^1.0.0-rc.2",
     "connect-multiparty": "^2.2.0",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.3-alpha.1",
@@ -19,6 +20,7 @@
     "jquery-file-upload-middleware": "^0.1.8",
     "jsonwebtoken": "^8.5.0",
     "mysql": "^2.16.0",
-    "orm": "^5.0.4"
+    "orm": "^5.0.4",
+    "scrape-it": "^5.1.4"
   }
 }
